@@ -11,27 +11,56 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+ <dependencies>
+  <dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter</artifactId>
+    <version>5.10.2</version>
+    <scope>test</scope>
+  </dependency>
+   <dependency>
+     <groupId>org.openjfx</groupId>
+     <artifactId>javafx-controls</artifactId>
+     <version>21</version>
+   </dependency>
+   <dependency>
+     <groupId>org.openjfx</groupId>
+     <artifactId>javafx-fxml</artifactId>
+     <version>21</version>
+   </dependency>
+   <dependency>
+     <groupId>org.openjfx</groupId>
+     <artifactId>javafx-graphics</artifactId>
+     <version>21</version>
+   </dependency>
+   <dependency>
+     <groupId>org.openjfx</groupId>
+     <artifactId>javafx-controls</artifactId>
+     <version>21</version>
+   </dependency>
+   <dependency>
+     <groupId>org.openjfx</groupId>
+     <artifactId>javafx-fxml</artifactId>
+     <version>21</version>
+   </dependency>
+</dependencies>
 
   <build>
     <plugins>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>3.1.0</version>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.8</version>
         <configuration>
           <mainClass>auction_system.App</mainClass>
+          <options>
+            <option>--add-modules</option>
+            <option>javafx.controls,javafx.fxml</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
